// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Actions Action and method 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c7=""
    ng-reflect-text="Action and Method"
  >
    <button
      _ngcontent-a-c7=""
    >
      Action and Method
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addons/Actions Action only 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c6=""
    ng-reflect-text="Action only"
  >
    <button
      _ngcontent-a-c6=""
    >
      Action only
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
